--- a/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
+++ b/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
@@ -218,6 +218,28 @@ svg {
 .animation-check.error p {
   color: #d06079;
 }
+.latest-comment-list {
+  border-top: 2px solid #154c799c;
+  padding-top: 5px;
+}
+.post-feed-latest-comment {
+  /* border: 3px solid green; */
+  margin-top: 5px;
+  display: grid;
+  grid-template-columns: 1fr 8fr;
+  border-radius: 5px;
+  grid-gap: 5px;
+}
+.post-feed-latest-comment img {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+.latest-comment-info {
+  padding: 5px;
+  border-radius: 5px;
+  background-color: rgba(128, 128, 128, 0.555);
+}
 @-webkit-keyframes dash {
   0% {
     stroke-dashoffset: 1000;
