--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ html {
   --color-bg: #080f0fb6;
   /* --color-bg-variant: #2c2c6c; */
   --color-bg-variant: #36486b;
+  --color-primary1: #256eff;
   --color-primary: #4db5ff;
   --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-white: white;
@@ -109,6 +110,21 @@ a:hover {
   background-color: var(--color-secondary-social);
   color: white;
 }
+
+.btn-alternate {
+  border: none;
+  width: 100%;
+  max-width: 15rem;
+  letter-spacing: 2.5px;
+  padding: 15px 5px;
+  font-weight: 700;
+  border-radius: 4px;
+  text-transform: uppercase;
+  cursor: pointer;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+}
+
 .btn-secondary:hover {
   background-color: var(--color-secondary-social);
   color: white;
@@ -146,5 +162,20 @@ img {
   }
   section {
     margin-top: 2rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .btn-alternate:hover {
+    background-color: var(white);
+    box-shadow: 0px 15px 20px rgba(46, 104, 229, 0.4);
+    color: var(--color-primary);
+    transform: translateY(-7px);
+  }
+  #contact-btn :hover {
+    background-color: var(--color-alternate);
+    box-shadow: 0px 15px 20px #d7263e81;
+    color: #fff;
+    transform: translateY(-7px);
   }
 }
