--- a/src/components/AppHeader/AppHeader.css
+++ b/src/components/AppHeader/AppHeader.css
@@ -5,24 +5,30 @@
   font-family: "Lato", sans-serif;
   width: 100%;
   max-width: 1300px;
-  padding: 0px 15px;
+  padding: 0px;
   margin: 0 auto;
+  /* border: 3px solid green; */
 }
-.logo {
+.logo-m {
+  /* border: 2px solid crimson; */
   display: flex;
+  justify-content: flex-start;
+  /* display: flex;
 
   align-items: center;
-  justify-content: flex-start;
-  gap: -10px;
+  justify-content: flex-start; */
+  /* gap: -10px; */
 }
 .logo h2 {
   font-weight: 700;
+  margin: -20px;
+  padding: 0;
   font-family: "Fira Sans", sans-serif;
   font-size: auto;
 }
-.logo img {
+/* .logo img {
   width: 70px;
-}
+} */
 .navbar-menu ul {
   padding: 0;
   list-style: none;
@@ -80,9 +86,9 @@ a:after {
     padding: 15px;
   }
   .logo {
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    width: 100%;
+    padding: 2px;
     margin: 0;
   }
   .logo h2 {
