--- a/src/components/AppHeader/AppHeader.css
+++ b/src/components/AppHeader/AppHeader.css
@@ -67,7 +67,9 @@ a:after {
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
   width: 0;
 }
-
+#contact-a:after {
+  background-color: transparent !important ;
+}
 .navbar-container-sm {
   display: none;
 }
