--- a/src/components/Showcase/Showcase.css
+++ b/src/components/Showcase/Showcase.css
@@ -61,9 +61,66 @@
   font-size: 13px;
 }
 #contact-btn {
-  background-color: #d7263d;
+  /* background-color: #d7263d; */
   color: white;
   font-size: 13px;
+}
+.showcase-info-image-lg svg {
+  width: 80%;
+
+  /* border: 3px solid red; */
+}
+
+#box-1 {
+  /* transition: 1s smooth; */
+  animation: box1 12s infinite linear;
+
+  opacity: 1;
+}
+
+#box-2 {
+  animation: box2 12s infinite linear;
+}
+#box-3 {
+  animation: box3 12s infinite linear;
+}
+#box-4,
+#Group,
+#js-1,
+#node-js-1,
+#Vector_21 {
+  opacity: 0;
+}
+
+#js-1 {
+  transform: translateX(0%);
+  animation: js-show 12s infinite linear;
+}
+#Vector_21 {
+  animation: react-show 12s infinite linear;
+}
+#node-js-1 {
+  animation: nodejs-show 12s infinite linear;
+}
+#Group {
+  opacity: 1;
+  animation: mongo-show 12s infinite linear;
+}
+/* #js-1 {
+  opacity: 1;
+  transform: translateX(-5%);
+}
+#js-1 {
+  opacity: 1;
+  transform: translateX(-5%);
+} */
+#hand-2,
+#hand-1,
+#shirt-1 {
+  animation: shake 8s infinite linear;
+}
+.btn a:after {
+  background-color: none;
 }
 @media screen and (min-width: 900px) {
   .showcase-container {
@@ -99,5 +156,180 @@
     background-color: #d7263d;
     color: white;
     font-size: 16px;
+  }
+}
+@keyframes box1 {
+  0% {
+    transform: translateY(-5%);
+
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(-5%);
+    opacity: 0;
+  }
+  75% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+  99% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes box2 {
+  0% {
+    transform: translateY(-10%);
+
+    opacity: 0;
+  }
+  25% {
+    transform: translateY(-10%);
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+  99% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes box3 {
+  0% {
+    transform: translateY(-20%);
+
+    opacity: 0;
+  }
+  25% {
+    transform: translateY(0%);
+
+    opacity: 1;
+  }
+  99% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0%);
+
+    opacity: 0;
+  }
+}
+@keyframes shake {
+  0% {
+    transform: translate(1px, 0.75px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -1px) rotate(-0.5deg);
+  }
+  20% {
+    transform: translate(-1px, 0px) rotate(0.5deg);
+  }
+  30% {
+    transform: translate(0px, 1px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(0.5deg);
+  }
+  50% {
+    transform: translate(-1px, 1px) rotate(-0.5deg);
+  }
+  60% {
+    transform: translate(-1px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(1px, 1px) rotate(-0.5deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(0.5deg);
+  }
+  90% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -1.5px) rotate(-1deg);
+  }
+}
+
+@keyframes js-show {
+  0% {
+    opacity: 1;
+  }
+  24% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes react-show {
+  0% {
+    opacity: 0;
+  }
+  24% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  49% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes nodejs-show {
+  0% {
+    opacity: 0;
+  }
+
+  49% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  74% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes mongo-show {
+  0% {
+    opacity: 0;
+  }
+
+  74% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
