--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -25,6 +25,7 @@
 #about ul {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
 }
 @media screen and (max-width: 1024px) {
