--- a/src/components/AppHeader/AppHeader.css
+++ b/src/components/AppHeader/AppHeader.css
@@ -55,7 +55,7 @@
   padding: 15px 20px;
   position: relative;
 }
-a:after {
+.btn-underline a:after {
   background: none repeat scroll 0 0 transparent;
   bottom: 0;
   content: "";
