--- a/src/index.css
+++ b/src/index.css
@@ -147,6 +147,8 @@ img {
   width: 100%;
   height: 100%;
 }
+.btn-underline {
+}
 /*--Media Queries for medium devices */
 @media screen and (max-width: 1024px) {
   .container {
@@ -174,8 +176,8 @@ img {
     transform: translateY(-7px);
   }
   #contact-btn :hover {
-    background-color: var(--color-alternate);
-    box-shadow: 0px 15px 20px #d7263e81;
+    /* background-color: var(--color-alternate); */
+    box-shadow: 0px 15px 20px goldenrod;
     color: #fff;
     transform: translateY(-7px);
   }
