--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -54,6 +54,9 @@
 .portfolio_item:nth-child(4) {
   background-color: #e98a15ad;
 }
+.portfolio_item:nth-child(5) {
+  background-color: #7f96ff;
+}
 .portfolio_info {
   display: flex;
   flex-direction: column;
