--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -44,11 +44,15 @@
 .portfolio_item:nth-child(2) a:nth-child(even):hover {
   background-color: white;
 }
-.portfolio_item:nth-child(2) {
+.portfolio_item:nth-child(3) {
   background-color: #9a031ead;
 }
-.portfolio_item:nth-child(3) {
+.portfolio_item:nth-child(2) {
   background-color: #5448c8ad;
+  color: white;
+}
+.portfolio_item:nth-child(2) h3 {
+  color: white;
 }
 
 .portfolio_item:nth-child(5) {
